--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,11 +5,11 @@ html {
   
   body {
     margin-bottom: 80px;
-    background-image: url("../images/paper.png");
+    background-image: url("../images/newsbackground.jpg");
   }
   
   .card a:not([href]):not([tabindex]).scrape-new {
-    color: #2196F3;
+    color: rgb(109, 154, 190);
   }
   
   .footer {
@@ -18,13 +18,13 @@ html {
     width: 100%;
     height: 80px;
     color: white;
-    background-color: #2196f3;
+    background-color: #85a1b8;
   }
   
   .navbar {
-    margin-bottom: 0;
+   margin-bottom: 0;
   }
-  
+
   .jumbotron {
     position: relative;
     width: 100%;
@@ -47,7 +47,7 @@ html {
   
   .jumbotron .background-image {
     height: 100%;
-    background-image: url("../images/newspaper.jpg");
+    background-image: url("../images/newsbackground.jpg");
     background-size: cover;
   }
   
@@ -83,7 +83,7 @@ html {
   }
   
   .card .card-header {
-    background-color: #2196f3;
+    background-color: #92b8d6;
     position: relative;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -133,6 +133,7 @@ html {
     margin-left: 10px;
     font-weight: 800;
     color: white;
+    background-color: #85a1b8;
   }
   
   .navbar-nav > li > a.scrape-new:hover,
