--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="/">Mongo Scraper</a>
+    <a class="navbar-brand" href="/">Mongo News Scraper</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,8 +29,8 @@
     <div class="background-image">
     </div>
     <div class="caption">
-        <h1>Saved Articles</h1>
-        <p>Your Saved Articles</p>
+        <h1>To Read At Another Time</h1>
+        <p>Your Saved Articles </p>
     </div>
 </div>
 <div class="container-fluid article-container">
@@ -66,7 +66,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>New York Times Mongo Scraper</p>
+        <p>New York Times Mongo News Scraper</p>
     </div>
 </footer>
 
